weather_k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-frontend
  labels:
    app: weather-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-frontend
  template:
    metadata:
      labels:
        app: weather-frontend
    spec:
      containers:
      - name: frontend
        image: rahul4475/weather_frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: weather-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
  type: NodePort
